--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,24 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family: 'Roboto', sans-serif;
 }
-.main-container{
+*{
+    margin:0px;
+}
+.main-module{
     max-width:1440px;
-    height:960px;
-    margin:auto;
-    
+    height:100vh;
+    margin:auto;   
     position: relative;
-    
+    overflow: hidden;  
 }
-.main-container img{
+.main-module img{
     height: 330px;
     width: 505px;
     margin-top: 96px;
     margin-bottom:534px;
     margin-left: 230px;
     margin-right: 705px;
-    float:left;
-    background-position: center;
-    border-radius: 10px;
-    
-    
+    float:left;  
 }
 .article-container{
     width:380px;
@@ -30,12 +27,139 @@ body{
     margin-top: 136px;
     line-height: 1.3;
 }
-.button{
+    p {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+}
+    h1{
+    font-weight: 700;
+    line-height: 50.4px;
+}
+.main-button{
     padding:16px 40px;
     border-radius: 40px;
     border: none;
-    font-size: 17px;
+    font-size: 16px;
     background-color: #E4C1AE;
     font-weight: bold;
     cursor:pointer;
+    line-height: 16px;
+    margin-top: 32px;
 }
+.main-button:hover{
+    background-color: lightgrey;
+}
+.popup{
+    width: 920px;
+    height:230px;
+    
+    position:absolute;
+    top:0;
+    left:50%;
+    transform:translate(-50%,-50%) scale(0.1);
+    background-color: #FFFFFF;
+    visibility:hidden;
+    transition: 0.2s, top 0.2s; 
+}
+/*opened popoup*/
+.open-popup{
+    visibility:visible;
+    top:50%;
+    transform:translate(-50%,-50%) scale(1);
+    box-shadow: 0 0 0 1440px rgb(0,0,0,0.5);
+}
+h2{
+    font-size: 42px;
+    line-height: 50.4px;
+    color: #121212;
+    padding-left: 95px;
+    padding-top: 56px;
+}
+.alert-info{
+    font-size: 16px;
+    line-height: 24px;
+    color: #121212;
+    padding-left: 95px;
+    padding-top:24px;
+    font-weight: 300; 
+}
+.close-button{
+    position: absolute;
+    margin-top: -102px;
+    margin-left:862px ;
+    cursor: pointer;
+    width: 12px;
+    height: 12px;
+}
+@media only screen and (max-width:1300px){
+    .main-module{
+       margin-left: -100px;  
+    }
+    p{       
+        font-size: 14px;
+        width: 340px;
+    }
+    h1{
+        font-size:30px ;
+    }}
+@media only screen and (max-width:1300px){
+    p{       
+        font-size: 14px;
+        width: 340px;
+    }
+    h1{
+        font-size:30px ;
+    }
+    .popup{
+        max-width: 75%;
+    }
+    .close-button{
+        
+        margin-left:92% ;   
+    }}
+
+@media only screen and (max-width:1050px){
+.article-container{
+    width:380px;
+    margin-left: 250px;
+    margin-top: 500px;
+    }}
+@media only screen and (max-width:740px){
+    .main-module img{
+    height: 290px;
+    width: auto;
+    float:left;
+    }
+    .article-container{
+    width:380px;
+    margin-left: 250px;
+    margin-top: 450px;
+    }}
+@media only screen and (max-width:640px){
+    .main-module img{
+        height: 250px;
+        width: auto;
+        margin-left: 200px;
+    }
+    .article-container{
+        width:380px;
+        margin-left: 200px;
+        margin-top: 400px;
+    }  
+        .article-container h1{
+            font-size: 25px;
+    }}
+@media only screen and (max-width:550px){
+    .main-module img{
+        height: 230px;
+        width: auto;
+        margin-left: 160px;
+    }
+    .article-container{
+        margin-left: 160px;
+        margin-top: 370px;
+    }  
+    .article-container h1{
+        font-size: 20px;
+    }}
